--- a/codigo/public/homepage.html
+++ b/codigo/public/homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="/codigo/public/assets/css/homepage.css">
+    <link rel="stylesheet" href="/codigo/public/assets/css/style.css">
 </head>
 <body>
     <header class="cabecalho">
