Configuração do json-server e implementação de endpoints

--- a/codigo/public/provasesimulados.html
+++ b/codigo/public/provasesimulados.html
@@ -19,23 +19,23 @@
                     alt="Notificações"></a>
         </div>
     </header>
-    <h1>Pesquisa de Concursos e Simulados</h1>
-    <input type="text" id="search" placeholder="Pesquisar..." oninput="buscar()">
+    <h1>Busca de Simulados e Concursos</h1>
+    <input type="text" id="search" placeholder="Pesquise por simulados ou concursos">
+    <button onclick="buscar()">Buscar</button>
     <ul id="resultados"></ul>
-    <div id="caixinha">
-        <p>Simulado de Matemática Básica</p>
-        <p>15/10/2025</p>
-        <div id="duracao">
-            <p>Duração:</p>
-            <p>60min</p>
-        </div>
-        <div id="dif">
-            <p>Dificuldade:</p>
-            <p>Intermediário</p>
-        </div>
-        <div id="iniciar">
-            <button>Saber Mais</button>
-        </div>
+    <p>Simulado de Matemática Básica</p>
+    <p>15/10/2025</p>
+    <div id="duracao">
+        <p>Duração:</p>
+        <p>60min</p>
+    </div>
+    <div id="dif">
+        <p>Dificuldade:</p>
+        <p>Intermediário</p>
+    </div>
+    <div id="iniciar">
+        <button>Saber Mais</button>
+    </div>
     </div>
     <div id="caixinha">
         <p>Simulado de Matemática Básica</p>
