--- a/codigo/public/provasesimulados.html
+++ b/codigo/public/provasesimulados.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provas e Simulados</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/provasesimulados.css">
+    <link rel="stylesheet" href="./assets/css/style.css"> <!-- CSS global -->
+    <link rel="stylesheet" href="./assets/css/provasesimulados.css"> <!-- CSS específico da página -->
 </head>
 
 <body>
@@ -19,24 +19,16 @@
                     alt="Notificações"></a>
         </div>
     </header>
+
     <h1>Busca de Simulados e Concursos</h1>
-    <input type="text" id="search" placeholder="Pesquise por simulados ou concursos">
-    <button onclick="buscar()">Buscar</button>
-    <ul id="resultados"></ul>
-    <p>Simulado de Matemática Básica</p>
-    <p>15/10/2025</p>
-    <div id="duracao">
-        <p>Duração:</p>
-        <p>60min</p>
+    <div class="barra-pesquisa">
+        <input type="text" id="search" placeholder="Pesquise por simulados ou concursos">
+        <button onclick="buscar()">Buscar</button>
     </div>
-    <div id="dif">
-        <p>Dificuldade:</p>
-        <p>Intermediário</p>
-    </div>
-    <div id="iniciar">
-        <button>Saber Mais</button>
-    </div>
-    </div>
+
+    <div id="resultados"></div>
+
+    <!-- Simulado de Matemática Básica -->
     <div id="caixinha">
         <p>Simulado de Matemática Básica</p>
         <p>15/10/2025</p>
@@ -52,6 +44,7 @@
             <button>Saber Mais</button>
         </div>
     </div>
+
     <div id="caixinha">
         <p>Simulado de Matemática Básica</p>
         <p>15/10/2025</p>
@@ -67,11 +60,13 @@
             <button>Saber Mais</button>
         </div>
     </div>
+
     <footer>
         <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
         <p>Contato: vagacerta@gmail.com</p>
     </footer>
+
+    <script src="barradepesquisap&s.js"></script>
 </body>
-<script src="barradepesquisap&s.js"></script>
 
 </html>
