mudança no cadastro concurso

--- a/codigo/public/cadastrodeconcurso.html
+++ b/codigo/public/cadastrodeconcurso.html
@@ -70,7 +70,7 @@
             <button type="submit">CADASTRAR</button>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="/codigo/public/assets/js/cadastroconcursos.js"></script>
 </body>
 <footer>
     <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
