--- a/codigo/public/Filtro_concurso.html
+++ b/codigo/public/Filtro_concurso.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pesquisa de concursos com filtros avançados">
     <title>Pesquisa de Concursos</title>
-    <link rel="stylesheet" href="filtro_conc.css">
+    <link rel="stylesheet" href="/codigo/public/assets/css/filtro_conc.css">
 </head>
 
 <body>
