--- a/codigo/public/concurso.html
+++ b/codigo/public/concurso.html
@@ -1,34 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Pesquisa de Concursos</title>
+    <link rel="stylesheet" href="/codigo/public/assets/css/filtro_conc.css">
     <link rel="stylesheet" href="/codigo/public/assets/css/style.css">
-    <link rel="stylesheet" href="/codigo/public/assets/css/concurso.css">
-    <link rel="stylesheet" href="/codigo/public/assets/css/barradepesquisa.css">
+
 </head>
+
 <body>
     <header class="cabecalho">
-        <a href="homepage.html"><img src="/codigo/public/assets/images/logo.png" class="logo"></a>
+        <a href="/codigo/public/homepage.html"><img src="/codigo/public/assets/images/logo.png" class="logo"></a>
         <div class="icones">
-            <a href="suaconta.html"><img src="/codigo/public/assets/images/suaconta.png" class="conta"></a>
-            <a href="config.html"><img src="/codigo/public/assets/images/config.png" class="config"></a>
-            <a href="notificacao.html"><img src="/codigo/public/assets/images/notificacoes.png" class="notificacao"></a>
+            <a href="/codigo/public/suaconta.html"><img src="/codigo/public/assets/images/suaconta (1).png" class="conta"></a>
+            <a href="/codigo/public/config.html"><img src="/codigo/public/assets/images/config.png" class="config"></a>
+            <a href="/codigo/public/notificacao.html"><img src="/codigo/public/assets/images/notificacoes.png" class="notificacao"></a>
         </div>
     </header>
-    <nav id="nav-pesquisa">
-        <div class="search-container">
-            <span class="pesquisar"></span>
-            <input type="text" id="search-input" placeholder="Pesquisar por">
-            <span class="clear-btn" id="clear-btn">&times;</span>
-        </div>
-    </nav>
+
+    <div class="container">
+
+
+        <section id="filtros">
+            <h2>Filtros</h2>
+            <form id="form-filtros">
+                <div class="form-group">
+                    <label for="nome">Nome do Concurso:</label>
+                    <input type="text" id="nome" name="nome" placeholder="Digite o nome do concurso">
+                </div>
+
+                <div class="form-group">
+                    <label for="data">Data:</label>
+                    <input type="date" id="data" name="data">
+                </div>
+
+                <div class="form-group">
+                    <label for="nivelEnsino">Nível de Ensino:</label>
+                    <select id="nivelEnsino" name="nivelEnsino">
+            <option value="">Selecione</option>
+            <option value="nível médio">Nível Médio</option>
+            <option value="nível superior">Nível Superior</option>
+            <option value="nível técnico">Nível Técnico</option>
+          </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="localizacao">Localização:</label>
+                    <input type="text" id="localizacao" name="localizacao" placeholder="Digite a localização">
+                </div>
+
+                <button type="button" id="btn-pesquisar">Pesquisar</button>
+            </form>
+        </section>
+
+        <section id="resultados">
+            <h2>Resultados</h2>
+            <div id="lista-resultados"></div>
+        </section>
+    </div>
+
+    <script src="/codigo/public/assets/js/filtro_conc.js"></script>
     <footer>
         <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
         <p>Contato: vagacerta@gmail.com</p>
     </footer>
 </body>
-<script src="/codigo/public/assets/js/darktheme.js"></script>
-<script src="/codigo/public/assets/js/barradepesquisa.js"></script>
-</html>    
+
+</html>
