--- a/codigo/public/favorito.html
+++ b/codigo/public/favorito.html
@@ -5,27 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concursos Favoritos</title>
     <link rel="stylesheet" href="/codigo/public/assets/css/style.css">
-    <link rel="stylesheet" href="/codigo/public/assets/css/favoritos.css">
 </head>
 <body>
     <header class="cabecalho">
         <a href="homepage.html"><img src="/codigo/public/assets/images/logo.png" class="logo"></a>
-        <div class="icones">
-            <a href="suaconta.html"><img src="/codigo/public/assets/images/suaconta.png" class="conta"></a>
-            <a href="config.html"><img src="/codigo/public/assets/images/config.png" class="config"></a>
-            <a href="notificacao.html"><img src="/codigo/public/assets/images/notificacoes.png" class="notificacao"></a>
-        </div>
+        <h1>Seus Concursos Favoritos</h1>
     </header>
     <div class="container">
-        <h1>Seus Concursos Favoritos</h1>
         <div id="lista-favoritos">
-            <!-- Concursos favoritos aparecerão aqui -->
+            <!-- Lista de favoritos será carregada aqui -->
         </div>
     </div>
     <script src="/codigo/public/assets/js/favoritos.js"></script>
 </body>
-<footer>
-    <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
-    <p>Contato: vagacerta@gmail.com</p>
-</footer>
 </html>
