--- a/codigo/public/concurso.html
+++ b/codigo/public/concurso.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa de Concursos</title>
-    <link rel="stylesheet" href="/codigo/public/assets/css/filtro_conc.css">
-    <link rel="stylesheet" href="/codigo/public/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/filtro_conc.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
 <body>
     <header class="cabecalho">
-        <a href="/codigo/public/homepage.html"><img src="/codigo/public/assets/images/logo.png" class="logo"></a>
+        <a href="./homepage.html"><img src="./assets/images/logo.png" class="logo"></a>
         <div class="icones">
-            <a href="/codigo/public/suaconta.html"><img src="/codigo/public/assets/images/suaconta (1).png" class="conta"></a>
-            <a href="/codigo/public/config.html"><img src="/codigo/public/assets/images/config.png" class="config"></a>
-            <a href="/codigo/public/notificacao.html"><img src="/codigo/public/assets/images/notificacoes.png" class="notificacao"></a>
+            <a href="./suaconta.html"><img src="./assets/images/suaconta (1).png" class="conta"></a>
+            <a href="./config.html"><img src="./assets/images/config.png" class="config"></a>
+            <a href="./notificacao.html"><img src="./assets/images/notificacoes.png" class="notificacao"></a>
         </div>
     </header>
 
@@ -61,7 +61,7 @@
         </section>
     </div>
 
-    <script src="/codigo/public/assets/js/filtro_conc.js"></script>
+    <script src="./assets/js/filtro_conc.js"></script>
     <footer>
         <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
         <p>Contato: vagacerta@gmail.com</p>
