--- a/codigo/public/concurso.html
+++ b/codigo/public/concurso.html
@@ -14,7 +14,7 @@
     <header class="cabecalho">
         <a href="./homepage.html"><img src="./assets/images/logo.png" class="logo"></a>
         <div class="icones">
-            <a href="./suaconta.html"><img src="./assets/images/suaconta (1).png" class="conta"></a>
+            <a href="./suaconta.html"><img src="./assets/images/suaconta.png" class="conta"></a>
             <a href="./config.html"><img src="./assets/images/config.png" class="config"></a>
             <a href="./notificacao.html"><img src="./assets/images/notificacoes.png" class="notificacao"></a>
         </div>
