--- a/codigo/public/suaconta.html
+++ b/codigo/public/suaconta.html
@@ -23,9 +23,11 @@
             </div>
             <form id="usuarioForm">
             <input type="text" class="input-field" placeholder="Nome do usuário" required>
+            <input type="email" class="input-field" placeholder="Email" required>
             <input type="date" class="input-field" placeholder="Data de nascimento" required>
             <input type="password" class="input-field" placeholder="Senha" required autocomplete="current-password">
             <input type="text" class="input-field" placeholder="Endereço" required>
+            <input type="tel" class="input-field" placeholder="Telefone" required>
             <button id="atualizarButton" class="atualizar-button" type="button">ATUALIZAR</button>
         </form>
     </div>
@@ -36,3 +38,4 @@
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
+</div>
