--- a/codigo/public/notificacao.html
+++ b/codigo/public/notificacao.html
@@ -13,7 +13,7 @@
     <header class="cabecalho">
         <a href="/codigo/public/homepage.html"><img src="/codigo/public/assets/images/logo.png" class="logo"></a>
         <div class="icones">
-            <a href="/codigo/public/suaconta.html"><img src="/codigo/public/assets/images/suaconta (1).png" class="conta"></a>
+            <a href="/codigo/public/suaconta.html"><img src="/codigo/public/assets/images/suaconta.png" class="conta"></a>
             <a href="/codigo/public/config.html"><img src="/codigo/public/assets/images/config.png" class="config"></a>
             <a href="/codigo/public/notificacao.html"><img src="/codigo/public/assets/images/notificacoes.png" class="notificacao"></a>
         </div>
