Ajuste home page

--- a/codigo/public/homepage.html
+++ b/codigo/public/homepage.html
@@ -35,7 +35,7 @@
                     </a>
                 </div>
                 <div class="caixa">
-                    <a href="biblioteca.html">
+                    <a href="exiLivros.html">
                         <img src="/codigo/public/assets/images/book-alt.png" class="biblioteca"> BIBLIOTECA
                     </a>
                 </div>
