Ajuste na funcionalidade do Gustavo

--- a/codigo/public/homepage.html
+++ b/codigo/public/homepage.html
@@ -43,7 +43,7 @@
             <div class="linha">
                 <div class="linhaespecial">
                     <div class="caixaespecial">
-                         <a href="cadastrodelivro.html"><img src="/codigo/public/assets/images/cadastrodelivro.png" class="cadastrodelivro"> CADASTRO DE LIVROS</a>
+                         <a href="biblioteca.html"><img src="/codigo/public/assets/images/cadastrodelivro.png" class="cadastrodelivro"> CADASTRO DE LIVROS</a>
                     </div>
                     <div class="caixaespecial">
                             <a href="cadastrodeconcurso.html"><img src="/codigo/public/assets/images/cadastrodeconcurso.png" class="cadastrodelivro"> CADASTRO DE CONCURSOS</a>
