--- a/codigo/public/config.html
+++ b/codigo/public/config.html
@@ -5,31 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configurações</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/open-iconic/font/css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="/codigo/public/assets/css/style.css">
-    <link rel="stylesheet" href="/codigo/public/assets/config.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/config.css" />
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <a href="homepage.html"><img src="/codigo/public/assets/images/logo.png" class="logo" alt="Logo"></a>
+        <a href="homepage.html"><img src="./assets/images/logo.png" class="logo"></a>
+        <h1>Configurações</h1>
         <div class="icones">
-            <a href="suaconta.html"><img src="/codigo/public/assets/images/suaconta.png" class="conta" alt="Sua Conta"></a>
-            <a href="config.html"><img src="/codigo/public/assets/images/config.png" class="config" alt="Configurações"></a>
-            <a href="notificacao.html"><img src="/codigo/public/assets/images/notificacoes.png" class="notificacao" alt="Notificações"></a>
+            <a href="suaconta.html"><img src="./assets/images/suaconta.png" class="conta"></a>
+            <a href="config.html"><img src="./assets/images/config.png" class="config"></a>
+            <a href="notificacao.html"><img src="./assets/images/notificacoes.png" class="notificacao"></a>
+        </div>
     </header>
-    <div id="blue_block">
-        <h1 id="titulo">CONFIGURAÇÕES</h1>
+  <body>
+    <div id="buttonContainer"></div>
+    <div class="container">
+      <div id="botoes"></div>
     </div>
-    <div id="gray_box">
-        <button id="seta" aria-label="Voltar">
-            <span class="oi oi-chevron-left"></span>
-        </button>
-    </div>
-    <div class="sections" id="button-container"></div>
-    <script src="app.js"></script>
+</script>
     <footer>
-        <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
-        <p>Contato: vagacerta@gmail.com</p>
+      <p>&copy; 2024 VagaCerta. Todos os direitos reservados.</p>
+      <p>Contato: vagacerta@gmail.com</p>
     </footer>
-    <div id="linha"></div>
-</body>
+    <script src="./assets/js/config.js"></script>
+    </body>
+    </html>
+  </body>
 </html>
