--- a/codigo/public/homepage.html
+++ b/codigo/public/homepage.html
@@ -25,7 +25,7 @@
                     </a>
                 </div>
                 <div class="caixa">
-                    <a href="provasesimulados.html">
+                    <a href="simulados.html">
                         <img src="/codigo/public/assets/images/SIMULADOS.png" class="provasesimulados"> SIMULADOS
                     </a>
                 </div>
