--- a/codigo/public/simulados.html
+++ b/codigo/public/simulados.html
@@ -27,7 +27,7 @@
         <p>Contato: vagacerta@gmail.com</p>
     </footer>
 
-    <script src="simulados.js"></script>
+    <script src="assets/js/simulados.js"></script>
 </body>
 
 </html>
