--- a/codigo/public/simulados.html
+++ b/codigo/public/simulados.html
@@ -17,7 +17,7 @@
     <h1>Busca de Simulados</h1>
     <div class="barra-pesquisa">
         <input type="text" id="search" placeholder="Pesquise por um simulado">
-        <button onclick="buscar()">Buscar</button>
+        <button id="botaoBuscar">Buscar</button>
     </div>
 
     <div id="simulado-container"></div> <!-- Adicionado contêiner para simulados -->
